--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.7",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
