--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "pg": "^7.8.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-redux": "^6.0.0",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.7",
-    "uuid": "^3.3.2"
+    "redux-thunk": "^2.3.0",
+    "uuid": "^3.3.2",
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
