--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/iAmHarmon/Igotu#readme",
   "dependencies": {
     "bcrypt": "^3.0.3",
+    "body-parser": "^1.18.3",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "pg": "^7.8.0",
