--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "igotu",
-  "version": "0.1.0",
+  "name": "igotu-by-stardust",
+  "version": "0.1.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -21,7 +21,6 @@
   "dependencies": {
     "bcrypt": "^3.0.3",
     "body-parser": "^1.18.3",
-    "cirrus-ui": "^0.5.4",
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
@@ -33,8 +32,7 @@
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.7",
     "redux-thunk": "^2.3.0",
-    "uuid": "^3.3.2",
-    "whatwg-fetch": "^3.0.0"
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
